// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.addCommentMutation Admin wants to comment 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": Object {
          "_id": "userAdmin",
        },
        "authorEmail": null,
        "authorName": null,
        "body": "Ma super réponse",
        "id": Any<String>,
        "moderationStatus": "APPROVED",
        "parent": Object {
          "id": "Q29tbWVudDpldmVudENvbW1lbnQx",
        },
        "published": true,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation Anonymous wants to add a comment on a blog post 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": null,
        "authorEmail": "anonyme@cap-collectif.com",
        "authorName": "Je suis anonyme",
        "body": "Je suis un super contenu",
        "id": Any<String>,
        "moderationStatus": "APPROVED",
        "parent": null,
        "published": true,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation Anonymous wants to add a comment on a blog post when moderation is enabled 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": null,
        "authorEmail": "anonyme@cap-collectif.com",
        "authorName": "Je suis anonyme",
        "body": "Je suis un super contenu",
        "id": Any<String>,
        "moderationStatus": "PENDING",
        "parent": null,
        "published": false,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation Anonymous wants to add an anwer to a comment 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": null,
        "authorEmail": "vivele94@cap-collectif.com",
        "authorName": "Kéké",
        "body": "Ma super réponse",
        "id": Any<String>,
        "moderationStatus": "APPROVED",
        "parent": Object {
          "id": "Q29tbWVudDpldmVudENvbW1lbnQx",
        },
        "published": true,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation User wants to add a comment on a proposal 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": Object {
          "_id": "user5",
        },
        "authorEmail": null,
        "authorName": null,
        "body": "Tololo",
        "id": Any<String>,
        "moderationStatus": "APPROVED",
        "parent": null,
        "published": true,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation User wants to comment when moderation is disabled 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": Object {
          "_id": "user5",
        },
        "authorEmail": null,
        "authorName": null,
        "body": "Ma super réponse",
        "id": Any<String>,
        "moderationStatus": "APPROVED",
        "parent": Object {
          "id": "Q29tbWVudDpldmVudENvbW1lbnQx",
        },
        "published": true,
      },
    },
  },
}
`;

exports[`mutations.addCommentMutation User wants to comment when moderation is enabled 1`] = `
Object {
  "addComment": Object {
    "commentEdge": Object {
      "node": Object {
        "author": Object {
          "_id": "user5",
        },
        "authorEmail": null,
        "authorName": null,
        "body": "Ma super réponse",
        "id": Any<String>,
        "moderationStatus": "PENDING",
        "parent": Object {
          "id": "Q29tbWVudDpldmVudENvbW1lbnQx",
        },
        "published": true,
      },
    },
  },
}
`;
